--- a/content/en/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
+++ b/content/en/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
@@ -174,7 +174,7 @@ Now that you have a replication instance, you need to create source and target e
 |  Endpoint Identifier	 |  `**S3-target**`  |
 |  Descriptive Amazon Resource Name	 |  leave blank  |
 |  Target Engine	 |  Amazon S3  |
-|  Server Name	 |  < ARN of the `**dms-vpc-role**` >  |
+|  Server Name	 |  < ARN of the `**dms-migration-role**` >  |
 |  Bucket Name	 |  < Name of Your S3 Bucket >  |
 |  Bucket folder	 |  `**dmstargetfolder**`  |
     {{% /expand %}}
