--- a/content/en/6-Troubleshooting/6.2-TableErrors/6.2.1-EnvironmentCreation.md
+++ b/content/en/6-Troubleshooting/6.2-TableErrors/6.2.1-EnvironmentCreation.md
@@ -13,4 +13,8 @@ In this troubleshooting exercise, we are going to use resources (DMS task/RDS in
 
 1. Now, go ahead and **RESTART** the same DMS task oracle-migration-task again.
 
+    ![](/images/6/2/1/0001.png?width=80pc)
+
 1. After this task is running for couple of minutes, you will notice the task went into error state. You may observe task status being either **Running with errors** or **Error**.
+
+    ![](/images/6/2/1/0002.png?width=60pc)
