--- a/content/en/6-Troubleshooting/6.2-TableErrors/6.2.2-TroubleshootingSteps.md
+++ b/content/en/6-Troubleshooting/6.2-TableErrors/6.2.2-TroubleshootingSteps.md
@@ -7,15 +7,15 @@ pre: "<b> 6.2.2. </b>"
 
 1. When you investigate any DMS migration issues, start your investigation by reviewing current status of task. To review task status, navigate to the [**AWS DMS console**](https://console.aws.amazon.com/dms/v2/) and select the DMS task from the list. You will notice status of each task in the list.
 
-[dms-troubleshooting-tableerr1]
+    ![](/images/6/2/2/0002.png?width=80pc)
 
 2. DMS task status **Running with errors** or **Error** means one or more tables in the task is moved to error state. When DMS mark any table in error state, by default, that table get suspended from the migration and DMS stop migration for that table but continue migration for other tables in scope. Whenever table error occur, DMS log warnings and related messages in DMS task logs. Hence to troubleshoot the issue further, open DMS task logs.
 
-[dms-troubleshooting-tableerr2]
+    ![](/images/6/2/2/0001.png?width=80pc)
 
 3. By default, you will see latest messages in DMS task logs and if you have enabled debug logging on the task, it may become difficult to find exact messages related to table error. In that case you may want to use filtering on DMS task log to filter out related messages. Once you filter for the specific messages for tables in error, you will notice log messages something similar to below log snipped:
 
-[dms-troubleshooting-tableerr-log1]
+    ![](/images/6/2/2/0003.png?width=80pc)
 
 {{% notice note %}}
 There can be several reasons where DMS suspend a table from processing. In many cases, you might not find enough information from DMS task logs to troubleshoot the issue further. In those cases, best next step would be to enable debug logging on the task and reload  the suspended table. Once DMS reprocess the table and put that again in suspended mode, review new DMS task logs which will have more detailed logs.
