--- a/content/vi/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
+++ b/content/vi/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
@@ -119,7 +119,7 @@ Bây giờ bạn đã có một phiên bản sao, bạn cần tạo các điểm
 
     #### RDS Microsoft SQL Server target:
 
-    {{% expand "Expand this if your target type is RDS Microsoft SQL Server:" %}}
+    {{% expand "Mở phần này nếu dạng CSDL đích là RDS Microsoft SQL Server:" %}}
 
 |  Tham số	 |  Giá trị  |
 |----------------|-----------------|
@@ -143,7 +143,7 @@ Bây giờ bạn đã có một phiên bản sao, bạn cần tạo các điểm
 
     #### RDS Oracle target:
 
-    {{% expand "Expand this if your target type is Oracle:" %}}
+    {{% expand "Mở phần này nếu dạng CSDL đích là Oracle:" %}}
 
 |  Tham số	 |  Giá trị  |
 |----------------|-----------------|
@@ -167,14 +167,14 @@ Bây giờ bạn đã có một phiên bản sao, bạn cần tạo các điểm
 
     #### Amazon S3 Target
 
-    {{% expand "Expand this if your target type is Amazon S3:" %}}
+    {{% expand "Mở phần này nếu dạng CSDL đích là Amazon S3:" %}}
 |  Tham số	 |  Giá trị  |
 |----------------|-----------------|
 |  Endpoint Type	 |  Target endpoint  |
 |  Endpoint Identifier	 |  `**S3-target**`  |
 |  Descriptive Amazon Resource Name	 |  để trống  |
 |  Target Engine	 |  Amazon S3  |
-|  Server Name	 |  < ARN của `**dms-vpc-role**` >  |
+|  Server Name	 |  < ARN của `**dms-migration-role**` >  |
 |  Bucket Name	 |  < Tên S3 Bucket >  |
 |  Bucket folder	 |  `**dmstargetfolder**`  |
     {{% /expand %}}
