--- a/content/vi/6-Troubleshooting/6.1-MemoryPressure/6.1.2-TroubleshootingSteps.md
+++ b/content/vi/6-Troubleshooting/6.1-MemoryPressure/6.1.2-TroubleshootingSteps.md
@@ -9,11 +9,17 @@ Bất kể nguyên nhân gây ra lỗi là gì, quá trình khắc phục sự c
 
 1. Làm mới trang **DMS tasks** & xác minh trạng thái nhiệm vụ DMS. Nếu nhiệm vụ ở trạng thái **Failed (Thất bại)**, điều đó có nghĩa là DMS đã dừng xử lý nhiệm vụ và dừng lại do lỗi.
 
+    ![](/images/6/1/2/0000.png?width=80pc)
+
 2. Khi nhiệm vụ ở trạng thái **Failed**, hãy xác minh xem có bất kỳ thông báo nào được gửi bởi nhiệm vụ DMS không. Bạn có thể xem thông báo này trong mục Thông báo lỗi cuối cùng trên trang **DMS tasks**. Trong trường hợp này, rất rõ ràng là nhiệm vụ bị lỗi do sự cố hết bộ nhớ.
 
 3. Bây giờ, để khắc phục sự cố hết bộ nhớ, hãy điều hướng đến trang **DMS replication instance** và chuyển sang tab **CloudWatch metrics**. Xem lại số liệu cụ thể cho **Memory & Swap Usage (Sử dụng bộ nhớ & hoán đổi)**.
 
     Trong ảnh chụp màn hình ở trên, chúng ta có thể thấy rõ sự sụt giảm bộ nhớ có thể giải phóng và sự gia tăng mức sử dụng swap vào thời điểm xảy ra lỗi tác vụ. Các số liệu của CloudWatch được tính trung bình là 60 giây. Do đó, bạn có thể không thấy bộ nhớ giảm hoàn toàn xuống 0.
+
+    ![](/images/6/1/2/0001.png?width=80pc)
+    ![](/images/6/1/2/0002.png?width=80pc)
+    ![](/images/6/1/2/0003.png?width=80pc)
 
 4. Khi tác vụ DMS dừng hẳn, bạn có thể thấy thông báo bên dưới trong log tác vụ DMS:
 
