--- a/content/vi/6-Troubleshooting/6.2-TableErrors/6.2.2-TroubleshootingSteps.md
+++ b/content/vi/6-Troubleshooting/6.2-TableErrors/6.2.2-TroubleshootingSteps.md
@@ -7,15 +7,15 @@ pre: "<b> 6.2.2. </b>"
 
 1. Khi bạn điều tra bất kỳ sự cố di chuyển DMS nào, hãy bắt đầu điều tra bằng cách xem lại trạng thái hiện tại của tác vụ. Để xem lại trạng thái tác vụ, hãy điều hướng đến [**Bảng điều khiển AWS DMS**](https://console.aws.amazon.com/dms/v2/) và chọn tác vụ DMS từ danh sách. Bạn sẽ thấy trạng thái của từng tác vụ trong danh sách.
 
-[dms-troubleshooting-tableerr1]
+    ![](/images/6/2/2/0002.png?width=80pc)
 
 2. Trạng thái tác vụ DMS **Running with errors** hoặc **Error** có nghĩa là một hoặc nhiều bảng trong tác vụ được chuyển sang trạng thái lỗi. Khi DMS đánh dấu bất kỳ bảng nào ở trạng thái lỗi, theo mặc định, bảng đó sẽ bị tạm dừng di chuyển và DMS dừng di chuyển cho bảng đó nhưng tiếp tục di chuyển cho các bảng khác trong phạm vi. Bất cứ khi nào xảy ra lỗi bảng, DMS sẽ ghi lại cảnh báo và thông báo liên quan trong log tác vụ DMS. Do đó, để khắc phục sự cố thêm, hãy mở log tác vụ DMS.
 
-[dms-troubleshooting-tableerr2]
+    ![](/images/6/2/2/0001.png?width=80pc)
 
 3. Theo mặc định, bạn sẽ thấy các thông báo mới nhất trong log tác vụ DMS và nếu bạn đã bật ghi log gỡ lỗi trên tác vụ, có thể sẽ khó tìm thấy các thông báo chính xác liên quan đến lỗi bảng. Trong trường hợp đó, bạn có thể muốn sử dụng tính năng lọc trên log tác vụ DMS để lọc ra các thông báo liên quan. Sau khi lọc các thông báo cụ thể cho các bảng có lỗi, bạn sẽ thấy các thông báo log tương tự như log đã cắt bên dưới:
 
-[dms-troubleshooting-tableerr-log1]
+    ![](/images/6/2/2/0003.png?width=80pc)
 
 {{% notice note %}}
 Có thể có một số lý do khiến DMS tạm dừng xử lý bảng. Trong nhiều trường hợp, bạn có thể không tìm thấy đủ thông tin từ log tác vụ DMS để khắc phục sự cố thêm. Trong những trường hợp đó, bước tiếp theo tốt nhất là bật ghi log gỡ lỗi trên tác vụ và tải lại bảng đã tạm dừng. Sau khi DMS xử lý lại bảng và đưa bảng đó trở lại chế độ tạm dừng, hãy xem lại log tác vụ DMS mới, trong đó sẽ có log chi tiết hơn.
