--- a/content/en/7-CleanUp/7.2-DeleteDMSTask.md
+++ b/content/en/7-CleanUp/7.2-DeleteDMSTask.md
@@ -15,6 +15,7 @@ pre: "<b> 7.2. </b>"
 
 5. After the status of the migration tasks changes to **Stopped**, click on the **Actions** button again, and then select **Delete**.
 
-6. Confirm that you want to delete the migration task.
+    ![](/images/7/2/0001.png?width=85pc)
+    ![](/images/7/2/0002.png?width=85pc)
 
-Continue to page 7.3 to delete the DMS Endpoints...
+6. Confirm that you want to delete the migration task.
