--- a/content/en/7-CleanUp/7.3-DeleteEndpoints.md
+++ b/content/en/7-CleanUp/7.3-DeleteEndpoints.md
@@ -11,4 +11,6 @@ pre: "<b> 7.3. </b>"
 
 1. Confirm that you want to delete the endpoints.
 
+    ![](/images/7/3/0001.png?width=85pc)
+
 Continue to the next page to delete the DMS Replication instance...
