--- a/content/en/7-CleanUp/7.5-DeleteCfnStack.md
+++ b/content/en/7-CleanUp/7.5-DeleteCfnStack.md
@@ -11,4 +11,6 @@ pre: "<b> 7.5. </b>"
 
 1. Confirm that you want to delete the stack.
 
+    ![](/images/7/5/0001.png?width=85pc)
+
 1. Check the **CloudFormation console** to ensure the stack that you selected is removed.
