--- a/content/en/7-CleanUp/7.6-DeleteBucketAndRole.md
+++ b/content/en/7-CleanUp/7.6-DeleteBucketAndRole.md
@@ -11,11 +11,13 @@ This section should be completed only if you did the Amazon S3 target lab. You c
 
 1. Navigate to Amazon S3 console  and go to the bucket that you created as part of this lab.
 
-1. Click on the checkbox left to the `**dmstargetfolder**`. Click on the Actions button, and select **Delete**.
+1. Click on the checkbox left to the `**dmstargetfolder**`. Click on the Actions button, and select **Empty**.
 
 1. Get back to the bucket list and click on the checkbox next to the S3 bucket you created earlier. Click on **Delete**.
 
 1. Type in the name of your bucket, then click on **Delete**.
+
+    ![](/images/7/5/0001.png?width=85pc)
 
 1. The lab uses the `**DMS-VPC-ROLE**` which is needed for DMS to work in general. We would recommend leaving this role in place as there is no cost for IAM Roles and DMS will need this role if it doesn't exist. If you have any questions or concerns please reach out to your AWS contacts or support.
 
