--- a/content/vi/7-CleanUp/7.1-DeleteServerlessTask.md
+++ b/content/vi/7-CleanUp/7.1-DeleteServerlessTask.md
@@ -15,6 +15,7 @@ pre: "<b> 7.1. </b>"
 
 1. Sau khi trạng thái của quá trình sao chép thay đổi thành **Stopped**, hãy nhấp vào nút **Actions** một lần nữa, sau đó chọn **Delete**.
 
-1. Xác nhận rằng bạn muốn xóa bản sao.
+    ![](/images/7/1/0001.png?width=85pc)
+    ![](/images/7/1/0002.png?width=85pc)
 
-Tiếp tục đến trang 7.3 để xóa Endpoint DMS...
+1. Xác nhận rằng bạn muốn xóa bản sao.
