--- a/content/vi/7-CleanUp/7.2-DeleteDMSTask.md
+++ b/content/vi/7-CleanUp/7.2-DeleteDMSTask.md
@@ -15,6 +15,7 @@ pre: "<b> 7.2. </b>"
 
 5. Sau khi trạng thái của các nhiệm vụ di chuyển thay đổi thành **Stopped**, hãy nhấp vào nút **Actions** một lần nữa, sau đó chọn **Delete**.
 
-6. Xác nhận rằng bạn muốn xóa nhiệm vụ di chuyển.
+    ![](/images/7/2/0001.png?width=85pc)
+    ![](/images/7/2/0002.png?width=85pc)
 
-Tiếp tục đến trang tiếp theo để xóa Điểm cuối DMS...
+6. Xác nhận rằng bạn muốn xóa nhiệm vụ di chuyển.
