--- a/content/vi/7-CleanUp/7.3-DeleteEndpoints.md
+++ b/content/vi/7-CleanUp/7.3-DeleteEndpoints.md
@@ -11,4 +11,6 @@ pre: "<b> 7.3. </b>"
 
 1. Xác nhận rằng bạn muốn xóa các endpoint.
 
+    ![](/images/7/3/0001.png?width=85pc)
+
 Tiếp tục đến trang tiếp theo để xóa phiên bản DMS Replication...
