--- a/content/vi/7-CleanUp/7.4-DeleteRepInstance.md
+++ b/content/vi/7-CleanUp/7.4-DeleteRepInstance.md
@@ -9,6 +9,8 @@ pre: "<b> 7.4. </b>"
 
 1. Chọn phiên bản sao chép mà bạn đã tạo như một phần của hội thảo. Sau đó, nhấp vào nút **Actions** ở phía bên phải và chọn **Delete**.
 
-1. Xác nhận rằng bạn muốn xóa phiên bản sao chép.
+1. Xác nhận rằng bạn muốn xóa máy sao chép.
+
+    ![](/images/7/4/0001.png?width=85pc)
 
 Tiếp tục đến trang tiếp theo để xóa phần còn lại của tài nguyên...
