--- a/content/vi/7-CleanUp/7.5-DeleteCfnStack.md
+++ b/content/vi/7-CleanUp/7.5-DeleteCfnStack.md
@@ -11,4 +11,6 @@ pre: "<b> 7.5. </b>"
 
 1. Xác nhận rằng bạn muốn xóa stack.
 
+    ![](/images/7/5/0001.png?width=85pc)
+
 1. Kiểm tra **CloudFormation console** để đảm bảo stack mà bạn đã chọn đã bị xóa.
