--- a/content/vi/7-CleanUp/7.6-DeleteBucketAndRole.md
+++ b/content/vi/7-CleanUp/7.6-DeleteBucketAndRole.md
@@ -11,11 +11,13 @@ Phần này chỉ nên hoàn thành nếu bạn đã thực hiện phòng thí n
 
 1. Điều hướng đến bảng điều khiển Amazon S3 và đi đến thùng mà bạn đã tạo như một phần của phòng thí nghiệm này.
 
-1. Nhấp vào hộp kiểm bên trái `**dmstargetfolder**`. Nhấp vào nút Hành động và chọn **Delete**.
+1. Nhấp vào hộp kiểm bên trái `**dmstargetfolder**`. Nhấp vào nút Hành động và chọn **Empty**.
 
 1. Quay lại danh sách thùng và nhấp vào hộp kiểm bên cạnh thùng S3 mà bạn đã tạo trước đó. Nhấp vào **Delete**.
 
 1. Nhập tên thùng của bạn, sau đó nhấp vào **Delete**.
+
+    ![](/images/7/5/0001.png?width=85pc)
 
 1. Phòng thí nghiệm sử dụng `**DMS-VPC-ROLE**` cần thiết để DMS hoạt động nói chung. Chúng tôi khuyên bạn nên giữ nguyên vai trò này vì không mất phí cho Vai trò IAM và DMS sẽ cần vai trò này nếu không có. Nếu bạn có bất kỳ câu hỏi hoặc thắc mắc nào, vui lòng liên hệ với bộ phận liên hệ hoặc bộ phận hỗ trợ của AWS.
 
