--- a/content/en/7-CleanUp/7.1-DeleteServerlessTask.md
+++ b/content/en/7-CleanUp/7.1-DeleteServerlessTask.md
@@ -15,6 +15,7 @@ pre: "<b> 7.1. </b>"
 
 1. After the status of the replication changes to **Stopped**, click on the **Actions** button again, and then select **Delete**.
 
-1. Confirm that you want to delete the replication.
+    ![](/images/7/1/0001.png?width=85pc)
+    ![](/images/7/1/0002.png?width=85pc)
 
-Continue to page 7.3 to delete the DMS Endpoints...
+1. Confirm that you want to delete the replication.
