--- a/content/en/7-CleanUp/7.4-DeleteRepInstance.md
+++ b/content/en/7-CleanUp/7.4-DeleteRepInstance.md
@@ -11,4 +11,6 @@ pre: "<b> 7.4. </b>"
 
 1. Confirm that you want to delete the replication instance.
 
+    ![](/images/7/4/0001.png?width=85pc)
+
 Continue to the next page to delete the rest of the resources...
