--- a/content/en/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
+++ b/content/en/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
@@ -31,7 +31,7 @@ Now that you have a replication instance, you need to create source and target e
 |  SSL Mode	 |  none  |
 |  User Name	 |  dbadmin  |
 |  Password	 |  See Cloudformation **Output** tab & **DMSDBSecretP** or look it up in AWS Secrets Manager for Oracle  |
-|  SID/Service Name	 |  `ORACLEDB`  |
+|  Database Name	 |  	`dms_sample_target`  |
 |  Test endpoint connection -> VPC	 |  <VPC ID with DMSVpc in the name from Environment Setup Step>  |
 |  Replication Instance	 |  **cfn-DMSReplication** or **DMSReplication** or the one you created if it is ready  |
 
@@ -48,12 +48,12 @@ Now that you have a replication instance, you need to create source and target e
 |  Descriptive Amazon Resource Name	 |  leave blank  |
 |  Source Engine	 |  Microsoft SQL Server  |
 |  Access to Endpoint database Radio Button	 |  Select/click **Provide access information Manually**  |
-|  Server Name	 |  < SourceOracleEndpoint Should auto populate >  |
+|  Server Name	 |  < EC2 ip address/domain name > - Look it up in the **Output** tab of the CFn stack  |
 |  Port	 |  1433  |
 |  SSL Mode	 |  none  |
 |  User Name	 |  dbadmin  |
 |  Password	 |  See Cloudformation **Output** tab & **DMSDBSecretPSQLServer** or look it up in AWS Secrets Manager for SQL Server  |
-|  SID/Service Name	 |  ORACLEDB  |
+|  Database Name	 |  	`dms_sample`  |
 |  Test endpoint connection -> VPC	 |  <VPC ID with DMSVpc in the name from Environment Setup Step>  |
 |  Replication Instance	 |  **cfn-DMSReplication** or **DMSReplication** or the one you created if it is ready  |
 |  Endpoint Settings  |  	unfold arrow, check "Use Endpoint connection attributes" then add setUpMsCdcForTables=true to the text box  |
