--- a/content/en/3-MigrateToTarget/3.2-Migration/3.2.4-CreateTask.md
+++ b/content/en/3-MigrateToTarget/3.2-Migration/3.2.4-CreateTask.md
@@ -190,8 +190,8 @@ If the **Create Task** screen does not recognize any schemas, make sure to go ba
         |  Parameter	 |  Value  |
         |----------|------------|
         |  Target	 |  Schema  |
-        |  Schema Name	 |  `dbo`  |
-        |  Action	 |  Rename to: `dms_sample_dbo`  |
+        |  Schema Name	 |  `%` (if Microsoft SQL is used) or `%dbo`  |
+        |  Action	 |  Rename to: `dms_sample_dbo` or `dms_sample_target`  |
 
 1. Uncheck **Turn on premigration assessment** this should collapse this section for our workshop this part there isn't time for and it isn't required.
 
