--- a/content/en/4-Serverless/4.1-Migrate/4.1.1-CreateMigration.md
+++ b/content/en/4-Serverless/4.1-Migrate/4.1.1-CreateMigration.md
@@ -111,7 +111,7 @@ If the Create Task screen does not recognize any schemas, make sure to go back t
         |----------|------------|
         |  Target	 |  Schema  |
         |  Schema Name	 |  `dbo`  |
-        |  Action	 |  Rename to: `dms_sample_dbo`  |
+        |  Action	 |  Rename to: `dms_sample_target`  |
 
     ![](/images/4/1/1/0006.png?width=90pc)
 
