--- a/content/en/4-Serverless/4.2-ScaleTesting/4.2.2-MonitorUpscale.md
+++ b/content/en/4-Serverless/4.2-ScaleTesting/4.2.2-MonitorUpscale.md
@@ -13,6 +13,8 @@ As the DML load is generated on the source database, monitor the AWS DMS console
 
     You can look into more detail by clicking on **Maximizing Capacity Utilization**.
 
+    ![](/images/4/2/2/0001.png?width=80pc)
+
 2. Once the load exceeds **80%**, you can check the logs after 10 minutes to confirm that the event has triggered the scaling up of the DCU.
 
 This concludes our DMS Serverless Scale-up lab. Please proceed to the next lab to learn how to monitor the scaling-down event.
