--- a/content/vi/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
+++ b/content/vi/3-MigrateToTarget/3.2-Migration/3.2.3-CreateEndpoint.md
@@ -9,7 +9,7 @@ Bây giờ bạn đã có một phiên bản sao, bạn cần tạo các điểm
 
 1. Nhấp vào liên kết **Điểm cuối** ở bên trái, sau đó nhấp vào **Tạo điểm cuối** ở góc trên bên phải.
 
-    ![Bảng điều khiển Điểm cuối](/images/3/2/3/0000.png?width=80pc)
+    ![Bảng điều khiển DMS Endpoints](/images/3/2/3/0000.png?width=80pc)
 
 1. Nhập thông tin sau để tạo một điểm cuối cho cơ sở dữ liệu nguồn **dms_sample**. Xin lưu ý rằng mật khẩu không được cung cấp dưới đây, bạn cần vào Secrets Manager và mở **DMSDBSecret** để tiết lộ mật khẩu SQL Server (giống như trước nếu bạn đã thực hiện điều này). Nó cũng nằm trong tab đầu ra của Cloudformation Stack đầu tiên dưới mật khẩu, tùy thuộc vào việc bạn sử dụng SQL Server hay Oracle:
 
@@ -48,12 +48,12 @@ Bây giờ bạn đã có một phiên bản sao, bạn cần tạo các điểm
 |  Descriptive Amazon Resource Name	 |  để trống  |
 |  Source Engine	 |  Microsoft SQL Server  |
 |  Access to Endpoint database Radio Button	 |  Nhấp/Chọn **Provide access information Manually**  |
-|  Server Name	 |  < SourceOracleEndpoint sẽ tự điền >  |
+|  Server Name	 |  < địa chỉ ip / tên miền của EC2 > - Tìm trong tab **Output** của CFn stack  |
 |  Port	 |  1433  |
 |  SSL Mode	 |  none  |
 |  User Name	 |  dbadmin  |
 |  Password	 |  Xem Cloudformation **Output** tab & **DMSDBSecretPSQLServer** hoặc tra cứu tróng AWS Secrets Manager  |
-|  SID/Service Name	 |  ORACLEDB  |
+|  Database Name	 |  	`dms_sample`  |
 |  Test endpoint connection -> VPC	 |  <VPC ID với DMSVpc trong tên - từ bước Thiết Lập Môi Trường>  |
 |  Replication Instance	 |  **cfn-DMSReplication** hoặc **DMSReplication** - nếu máy đã sẵn sàng  |
 |  Endpoint Settings  |  mở mũi tên, kiểm tra **_"Use Endpoint connection attributes"_** sau đó thêm **_setUpMsCdcForTables=true_** vào hộp văn bản  |
