--- a/content/vi/3-MigrateToTarget/3.2-Migration/3.2.4-CreateTask.md
+++ b/content/vi/3-MigrateToTarget/3.2-Migration/3.2.4-CreateTask.md
@@ -189,8 +189,8 @@ Nếu màn hình **Create Task** không nhận dạng bất kỳ sơ đồ nào,
     | Tham số | Giá trị |
     |----------|------------|
     | Mục tiêu | Sơ đồ |
-    | Tên sơ đồ | `dbo` |
-    | Hành động | Đổi tên thành: `dms_sample_dbo` |
+    | Tên sơ đồ | `%` (nếu đích là Microsoft SQL) hoặc `%dbo` |
+    | Hành động | Đổi tên thành: `dms_sample_target` |
 
 1. Bỏ chọn **Bật đánh giá trước khi di chuyển** để thu gọn phần này cho hội thảo của chúng tôi vì phần này không có thời gian và không bắt buộc.
 
