--- a/content/vi/4-Serverless/4.1-Migrate/4.1.1-CreateMigration.md
+++ b/content/vi/4-Serverless/4.1-Migrate/4.1.1-CreateMigration.md
@@ -112,7 +112,7 @@ Quy tắc chuyển đổi cho phép bạn sửa đổi cấu trúc hoặc nội 
         |----------|------------|
         |  Target	 |  Schema  |
         |  Schema Name	 |  `dbo`  |
-        |  Action	 |  Rename to: `dms_sample_dbo`  |
+        |  Action	 |  Rename to: `dms_sample_target`  |
 
         ![](/images/4/1/1/0006.png?width=90pc)
 
