--- a/content/vi/4-Serverless/4.2-ScaleTesting/4.2.2-MonitorUpscale.md
+++ b/content/vi/4-Serverless/4.2-ScaleTesting/4.2.2-MonitorUpscale.md
@@ -11,7 +11,9 @@ Khi tải DML được tạo trên cơ sở dữ liệu nguồn, hãy theo dõi 
 
 1. Để truy cập số liệu CloudWatch cho DMS Serverless Replication, hãy điều hướng đến bảng điều khiển AWS DMS, chọn **"Serverless replications"** trong thanh bên trái, chọn bản sao không có máy chủ của bạn và tìm biểu đồ **Capacity Utilization** trong tab **Monitoring**.
 
-Bạn có thể xem chi tiết hơn bằng cách nhấp vào **Maximizing Capacity Utilization**.
+    Bạn có thể xem chi tiết hơn bằng cách nhấp vào **Maximizing Capacity Utilization**.
+
+    ![](/images/4/2/2/0001.png?width=80pc)
 
 2. Khi tải vượt quá **80%**, bạn có thể kiểm tra nhật ký sau 10 phút để xác nhận rằng sự kiện đã kích hoạt việc mở rộng DCU.
 
